tests/fail/unknown_attribute.stderr
error: Unexpected token
 --> tests/fail/unknown_attribute.rs:4:11
  |
4 | #[openapi(pizza)]
  |           ^^^^^
